compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__imports__using_private_external_type.snap
---
source: compiler-core/src/type_/tests/imports.rs
expression: "import one\n\npub fn main() {\n  one.X\n}"
---
----- SOURCE CODE
-- one.gleam
type X

-- main.gleam
import one

pub fn main() {
  one.X
}

----- ERROR
error: Unknown module value
  ┌─ /src/one/two.gleam:4:7
  │
4 │   one.X
  │       ^

The module `one` does not have a `X` value.
